--- a/packages/diary/package.json
+++ b/packages/diary/package.json
@@ -1,10 +1,12 @@
 {
   "name": "github-diary",
+  "description": "reflect over your life on GitHub",
   "version": "0.0.1",
   "main": "src/index.js",
   "author": "cdaringe <cdaringe@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "ghauth": "^3.2.1",
     "lodash": "^4.17.10",
     "meow": "^5.0.0",
     "nanographql": "^2.0.0",
@@ -13,7 +15,10 @@
   },
   "scripts": {
     "format": "prettier-standard 'src/**/*.js'",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "build": "node ./scripts build",
+    "publish:docker": "node ./scripts build",
+    "postpublish": "run-s build publish:docker"
   },
   "lint-staged": {
     "linters": {
@@ -27,6 +32,7 @@
   "devDependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^7.1.0",
+    "npm-run-all": "^4.1.3",
     "prettier-standard": "^8.0.1",
     "standard": "^11.0.1"
   }
