--- a/packages/diary/package.json
+++ b/packages/diary/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-diary",
   "description": "reflect over your life on GitHub",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "src/index.js",
   "author": "cdaringe <cdaringe@gmail.com>",
   "license": "MIT",
@@ -28,12 +28,19 @@
       ]
     }
   },
-  "repository": "git@github.com:cdaringe/github-diary.git",
   "devDependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^7.1.0",
     "npm-run-all": "^4.1.3",
     "prettier-standard": "^8.0.1",
     "standard": "^11.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cdaringe/github-diary.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cdaringe/github-diary/issues"
+  },
+  "homepage": "https://github.com/cdaringe/github-diary#readme"
 }
