--- a/packages/diary/package.json
+++ b/packages/diary/package.json
@@ -2,7 +2,7 @@
   "name": "github-diary",
   "description": "reflect over your life on GitHub",
   "version": "0.0.5",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "author": "cdaringe <cdaringe@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -29,11 +29,16 @@
     }
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.116",
+    "@types/meow": "^4.0.1",
+    "@types/nanographql": "^2.0.1",
+    "@types/node-fetch": "^2.1.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.1.0",
     "npm-run-all": "^4.1.3",
     "prettier-standard": "^8.0.1",
-    "standard": "^11.0.1"
+    "standard": "^11.0.1",
+    "typescript": "^3.0.3"
   },
   "repository": {
     "type": "git",
