--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
+    "d3": "^5.7.0",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-json-tree": "^0.11.0",
     "react-magic-dropzone": "^1.0.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "next"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "analyze": "source-map-explorer build/static/js/main.*",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "deploy": "run-s build scp",
     "eject": "react-scripts eject",
     "format": "prettier-standard 'src/**/*.js'",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "scp": "bash deploy-scp.sh",
+    "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom"
   },
   "lint-staged": {
     "linters": {
@@ -29,6 +34,12 @@
   "devDependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^7.1.0",
-    "prettier-standard": "^8.0.1"
-  }
+    "npm-run-all": "^4.1.3",
+    "prettier-standard": "^8.0.1",
+    "source-map-explorer": "^1.6.0"
+  },
+  "browserslist": [
+    ">0.25%",
+    "not op_mini all"
+  ]
 }
