--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,16 @@
       "type": "node",
       "request": "attach",
       "name": "Attach",
-      "port": 9229
+      "port": 9229,
+      "skipFiles": [
+        "<node_internals>/**/*.js"
+      ]
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/packages/diary/src/index.ts",
+      "name": "diary",
+      "program": "${workspaceFolder}/packages/diary/src/bin.ts",
       "outFiles": [
         "${workspaceFolder}/packages/diary/build"
       ]
