--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,24 +5,22 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "d3": "^5.7.0",
-    "lodash": "^4.17.10",
-    "panzoom": "^6.1.4",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "dom-to-image": "^2.6.0",
+    "lodash": "^4.17.11",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-json-tree": "^0.11.0",
-    "react-magic-dropzone": "^1.0.1",
-    "react-scripts": "next"
+    "react-magic-dropzone": "^1.0.1"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "build": "react-scripts build",
+    "build": "react-scripts-ts build",
     "deploy": "run-s build scp",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts-ts eject",
     "format": "prettier-standard 'src/**/*.js'",
-    "precommit": "lint-staged",
     "scp": "bash deploy-scp.sh",
-    "start": "react-scripts start",
-    "test": "react-scripts test --env=jsdom"
+    "start": "react-scripts-ts start",
+    "test": "react-scripts-ts test --env=jsdom"
   },
   "lint-staged": {
     "linters": {
@@ -33,14 +31,25 @@
     }
   },
   "devDependencies": {
-    "husky": "^0.14.3",
+    "@types/d3":"^5.0.0",
+    "@types/lodash":"^4.14.116",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.8",
+    "react-scripts-ts": "next",
+    "husky": "^1.0.1",
     "lint-staged": "^7.1.0",
     "npm-run-all": "^4.1.3",
     "prettier-standard": "^8.0.1",
-    "source-map-explorer": "^1.6.0"
+    "source-map-explorer": "^1.6.0",
+    "typescript": "^3.1.1"
   },
   "browserslist": [
     ">0.25%",
     "not op_mini all"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  }
 }
