--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,15 +31,16 @@
     }
   },
   "devDependencies": {
-    "@types/d3":"^5.0.0",
-    "@types/lodash":"^4.14.116",
+    "@types/classnames": "^2.2.6",
+    "@types/d3": "^5.0.0",
+    "@types/lodash": "^4.14.116",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
-    "react-scripts-ts": "next",
     "husky": "^1.0.1",
     "lint-staged": "^7.1.0",
     "npm-run-all": "^4.1.3",
     "prettier-standard": "^8.0.1",
+    "react-scripts-ts": "next",
     "source-map-explorer": "^1.6.0",
     "typescript": "^3.1.1"
   },
