--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,36 +13,42 @@
     "react-magic-dropzone": "^1.0.1"
   },
   "scripts": {
-    "analyze": "source-map-explorer build/static/js/main.*",
-    "build": "react-scripts-ts build",
+    "build": "next build && next export",
     "deploy": "run-s build scp",
-    "eject": "react-scripts-ts eject",
-    "format": "prettier-standard 'src/**/*.js'",
+    "eject": "next eject",
+    "format": "prettier 'src/**/*.{js,ts,tsx}' --write",
     "scp": "bash deploy-scp.sh",
-    "start": "react-scripts-ts start",
-    "test": "react-scripts-ts test --env=jsdom"
+    "start": "next dev",
+    "test": "next test --env=jsdom"
   },
   "lint-staged": {
     "linters": {
       "src/**/*.js": [
-        "prettier-standard",
+        "prettier",
         "git add"
       ]
     }
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "@types/classnames": "^2.2.6",
     "@types/d3": "^5.0.0",
+    "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.116",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.8",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.36",
+    "@types/react-dom": "^17.0.11",
     "husky": "^1.0.1",
     "lint-staged": "^7.1.0",
+    "next": "12.0.4",
     "npm-run-all": "^4.1.3",
-    "prettier-standard": "^8.0.1",
-    "react-scripts-ts": "next",
-    "source-map-explorer": "^1.6.0",
-    "typescript": "^3.1.1"
+    "prettier": "2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "next": "^4.0.3",
+    "typescript": "^4.5.2"
   },
   "browserslist": [
     ">0.25%",
@@ -52,5 +58,11 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
