--- a/packages/diary/package.json
+++ b/packages/diary/package.json
@@ -9,39 +9,27 @@
   "dependencies": {
     "ghauth": "^3.2.1",
     "lodash": "^4.17.10",
-    "meow": "^5.0.0",
+    "meow": "^9.0.0",
     "nanographql": "^2.0.0",
     "node-fetch": "^2.1.2",
     "toiletdb": "^1.4.1"
   },
   "scripts": {
-    "format": "prettier-standard 'src/**/*.js'",
-    "precommit": "lint-staged",
+    "format": "prettier . --write'",
     "build:image": "node ./scripts build",
     "build:src": "tsc",
     "build": "run-p build:*",
     "publish:docker": "echo ",
     "postpublish": "run-s build publish:docker"
   },
-  "lint-staged": {
-    "linters": {
-      "src/**/*.js": [
-        "prettier-standard",
-        "git add"
-      ]
-    }
-  },
   "devDependencies": {
     "@types/lodash": "^4.14.116",
-    "@types/meow": "^4.0.1",
     "@types/nanographql": "^2.0.1",
     "@types/node-fetch": "^2.1.2",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.1.0",
     "npm-run-all": "^4.1.3",
-    "prettier-standard": "^8.0.1",
-    "standard": "^11.0.1",
-    "typescript": "^3.0.3"
+    "prettier": "3.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "^5"
   },
   "repository": {
     "type": "git",
